@@ -15,6 +15,7 @@ action_add_sequence,os-sequence,
 action_add_sketchpad,os-sketchpad,
 action_add_synth,os-synth,
 action_check_for_update,system-software-update,
+action_close_current_tab,os-close-tabs,
 action_close_all_tabs,os-close-tabs,
 action_close_other_tabs,os-close-tabs,
 action_compact_toolbar,zoom-out,
