@@ -6,6 +6,7 @@ opensesame (2.9.1~pre1-ubuntu1) trusty; urgency=medium
     - Better detection of Exception messages (#285)
   * Improvements
     - Application-wide keyboard shortcuts for tab switching
+    - Add close current tab action
 
  -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Thu, 30 Oct 2014 14:43:09 +0100
 
